# Donation-App-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
accounts/: serializers.py  urls.py  views.py
config/: health.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
donations/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
donations/migrations/: 0001_initial.py  0002_remove_donation_category_donation_categories.py  0003_alter_category_name_alter_donation_title.py  0004_donation_description.py
payments/: admin.py  models.py  resources.py  serializers.py  urls.py  views.py  webhooks.py
payments/migrations/: 0001_initial.py  0002_donationpayment_user.py  0003_stripeevent.py
